# brainvisa-release

./: CMakeLists.txt  README.md  project_info.cmake  projects.txt
cmake/: brainvisa-release-config.cmake.in
